--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 dotenvy = "^0.15.6"
-reqwest = "0.11.14"
+reqwest = { version = "0.11", features = ["blocking"] }
 serde = "1.0.156"
